# rag_wiki_demo

./: .gitignore  CROSS_REFERENCE_REPORT.md  ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_PROGRESS.md  INDEX.md  NOTEBOOK_FIXES_REPORT.md  NOTEBOOK_VALIDATION_REPORT.md  POSTGRESQL_SETUP.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  START_HERE.md  VERIFICATION_REPORT.md  embedding-analysis-template.ipynb  pyproject.toml  pytest.ini  wikipedia-rag-tutorial-advanced.ipynb  wikipedia-rag-tutorial.ipynb
.github/workflows/: tests.yml
advanced-techniques/: 05-reranking.ipynb  06-query-expansion.ipynb  07-hybrid-search.ipynb  08-semantic-chunking-and-metadata.ipynb  09-citation-tracking.ipynb  10-combined-advanced-rag.ipynb  README.md
docs/: INDEX.md
docs/development/implementation/: enhancement-summary.md  implementation-summary.md
docs/development/releases/: changelog.md  release-notes.md  version-history.md
docs/development/reports/: cross-reference-report.md  execution-summary.md
docs/development/testing/: evaluation-guide.md  testing-guide.md  testing-summary.md
docs/learning-paths/: advanced-concepts.md  concepts.md  evaluation-concepts.md  learning-roadmap.md
docs/user-guides/: getting-started.md
evaluation-lab/: 01-create-ground-truth-human-in-loop.ipynb  02-evaluation-metrics-framework.ipynb  03-baseline-and-comparison.ipynb  04-experiment-dashboard.ipynb  05-supplemental-embedding-analysis.ipynb  README.md
foundation/: 00-load-or-generate-pattern.ipynb  00-registry-and-tracking-utilities.ipynb  00-setup-postgres-schema.ipynb  01-basic-rag-in-memory.ipynb  02-rag-postgresql-persistent.ipynb  README.md
tests/: __init__.py  conftest.py  test_database.py  test_foundation_utilities.py  test_notebook_execution.py  test_rag_core.py  test_rag_pipeline_e2e.py
