[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_wiki_demo"
version = "0.1.0"
description = "A comprehensive RAG (Retrieval-Augmented Generation) learning system with 12 Jupyter notebooks and PostgreSQL backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAG Wiki Demo Team", email = "info@example.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "embeddings",
    "llm",
    "machine-learning"
]

# Core dependencies
dependencies = [
    "ollama>=0.0.10",
    "datasets>=2.14.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=7.0",
    "pytest-postgresql>=5.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.1",
    "responses>=0.22",
    "faker>=15.0",
    "papermill>=2.4",
    "nbconvert>=7.0",
]

# Development dependencies
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-watch>=4.2.0",
]

# All optional dependencies
all = [
    "rag_wiki_demo[test,dev]",
]

[project.urls]
Homepage = "https://github.com/example/rag-wiki-demo"
Documentation = "https://github.com/example/rag-wiki-demo/blob/main/README.md"
Repository = "https://github.com/example/rag-wiki-demo.git"
Issues = "https://github.com/example/rag-wiki-demo/issues"

[tool.setuptools]
packages = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".gitignore", ".dockerignore"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -ra"
markers = [
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests (may take >5 seconds)",
    "e2e: End-to-end tests (full workflow testing)",
    "postgres: Tests requiring PostgreSQL",
    "notebooks: Tests for Jupyter notebook execution",
    "ollama: Tests requiring Ollama API",
]
